<resources>
    <string name="app_name">Github Users</string>
    <string name="sinopsis">sinopsis</string>
    <string name="detail">detail</string>
    <string name="ok">OK</string>
    <string name="perhatian">Warning</string>
    <string name="loading">Loading...</string>
    <string name="not_found_detail">Not Found Any Detail</string>
    <string name="not_found_users">Not Found Any Users</string>
    <string name="reload">Reload</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="input_username">Input Username</string>
    <string name="cancel">Cancel</string>
    <string name="colon">:</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repos">Repos</string>
    <string name="gists">Gists</string>
    <string name="bio">Bio</string>
    <string name="empty_bio">The bio is not available</string>
    <string name="nav_header_subtitle">Hariyanto Lukman</string>
</resources>